# Rust-projects

./: command_line.rs
biggest_palindrome/: main.rs  main1.rs  main2.rs  reconstruct_by_z.rs  z_function.rs
dining_philosophers/: Cargo.toml  philosophers.rs
iron-gcd/: Cargo.toml  gcd_server.rs
mandelbrot/: Cargo.toml  main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
process_management/child_grandch/: Cargo.toml
process_management/child_grandch/src/: kek.rs  main.rs
process_management/parent/: Cargo.toml
process_management/parent/src/: main.rs
process_management/simple_process/: Cargo.toml
process_management/simple_process/src/: main.rs
rust_no_std/: Cargo.toml  asm.s  build.rs  link.x
rust_no_std/embedded_app/: Cargo.toml  start.sh
rust_no_std/embedded_app/src/: main.rs  main0.rs  main1.rs  main2.rs  main3.rs
rust_no_std/embedded_app/src/src/: main.rs  main4.rs
rust_no_std/log/: Cargo.toml  build.rs  log.x
rust_no_std/log/src/: lib.rs  lib1.rs
rust_no_std/log/src/src/: lib.rs
rust_no_std/src/: lib.rs
rusty_immutable_tree/src/: main.rs
rusty_immutable_tree/src/tree/: preorder_iter.rs  the_tree.rs  tree_node.rs
rusty_tree/: Cargo.toml
rusty_tree/src/: main.rs  tree.rs
rusty_tree/src/tree/: preorder_iter.rs  the_tree.rs  tree_node.rs
tcp_hello_server/: Cargo.toml  server.rs
ugadaika/: Cargo.toml  ugadaika.rs
