[package]
name = "process"
version = "0.1.0"
authors = ["bomanyte <https://github.com/Incomprehensible>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.60", features = [ "extra_traits" ] }
nix = "0.17.0"
