[package]
name = "app"
version = "0.1.0"
authors = ["incomprehensible <inc0mprehensible@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.7"
cortex-m-semihosting = "0.3.1"
log = { path = "../Rust_loggin_nostd" }
rt = { path = "../Rust_no_std" }
